# beenode

./: .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile  docker-compose.dev.yml  docker-compose.yml  docker-workspace.toml  nginx.conf
.codex/: instructions.md
docs/: API.md  ARCHITECTURE.md  EXAMPLES.md  QUICKSTART.md  README.md  SECURITY.md  WHITEPAPER.md
scripts/: build-wasm.sh  dev.sh
src/: lib.rs  logging.rs  runtime.rs
src/auth/: mod.rs
src/clock/: mod.rs
src/core/: bse.rs  mod.rs  paths.rs  pattern.rs
src/identity/: bip85.rs  mod.rs
src/mind/: effects.rs  mind.rs  mod.rs
src/mobi/: mod.rs
src/namespaces/: auth.rs
src/node/: config.rs  mod.rs
src/nostr/: client.rs  effects.rs  mod.rs  namespace.rs
src/server/: mod.rs  routes.rs
src/wallet/: bdk.rs  effects.rs  mod.rs  namespace.rs
src/wasm/: account.rs  auth.rs  clock.rs  identity.rs  mind.rs  mod.rs  namespace.rs  node.rs  store.rs  vault.rs
src/wireguard/: mod.rs  namespace.rs
tests/: integration_tests.rs  mind_tests.rs  wallet_real_tests.rs  wireguard_tests.rs
vue-web-lab/: .env.example  README.md  index.html  package.json  vite.config.js
vue-web-lab/contracts/: shell-contract.json
vue-web-lab/docs/: SHELL_API.md  SHELL_CONTRACT.md
vue-web-lab/src/: App.vue  main.js  style.css
vue-web-lab/src/components/: ShellStatusBanner.vue  VerbPalette.vue
web/: index.html  legacy-index.html  package.json  vite.config.js
web/src/: App.jsx  main.jsx
web/src/api/: scrollApi.js
web/src/apps/: DemoSealedData.js  Home.jsx  LockScreen.jsx  RevealTool.jsx  Scrolls.jsx  SealCreator.jsx  SealExamples.jsx  Settings.jsx  TxForge.jsx  UtxoExplorer.jsx  Wallet.jsx
web/src/components/: DesktopShell.jsx  Dock.jsx  LandingPage.jsx  StatusBar.jsx  Window.jsx
web/src/contexts/: AuthContext.jsx  BalanceContext.js
web/src/styles/: tokens.css
