[package]
name = "beenode"
version = "0.1.0"
edition = "2021"
description = "Universal agentic node: Scrolls + Mind + Patterns"
license = "MIT"

[lib]
name = "beenode"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "beenode"
path = "src/bin/main.rs"

[features]
default = ["native"]
# Enable bitcoin crate (used by identity namespace). Avoids wasm-only builds pulling C deps.
bitcoin = ["dep:bitcoin"]
# Native platform (server, CLI, mobile FFI) - includes tokio, filesystem, network
# Clock (Layer 0) is included by default - all apps get the tick system
native = [
    "dep:beeclock-core",
    "dep:tokio",
    "dep:dirs",
    "dep:axum",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:rustls",
    "dep:nine-s-store",
    "dep:nine-s-shell",
    "dep:nine-s-kernel",
    "dep:bitcoin",
    "dep:bip39",
    "dep:x25519-dalek",
    "dep:zeroize",
    "nine-s-store/std-channel",
    "nine-s-core/std-channel",
]
# WASM platform (browser) - IndexedDB, fetch, wasm-bindgen
# Clock (Layer 0) is included - browser apps get the tick system
wasm = [
    "dep:beeclock-core",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
    "dep:indexed_db_futures",
    "dep:console_error_panic_hook",
    "dep:serde-wasm-bindgen",
    "dep:nine-s-store",
    "nine-s-store/wallet",
    "dep:bip39",
    "dep:rand",
    "dep:futures",
    "dep:getrandom",
    "chrono/wasmbind",
]
# Enable wallet module (BDK wallet + keychain integration)
wallet = ["native", "nine-s-store/wallet", "dep:bdk_wallet", "dep:bdk_electrum"]
# Enable bitcoind RPC sync (for Polar regtest testing - no electrs needed)
bitcoind-rpc = ["wallet", "dep:bdk_bitcoind_rpc", "dep:bitcoincore-rpc"]
# Enable nostr module (relay client + BeeBase)
nostr = ["native", "dep:nostr", "dep:tokio-tungstenite", "dep:futures-util"]

[dependencies]
# Core 9S from beebank (nine-s-core is WASM-compatible, others are native-only)
nine-s-core = { git = "https://github.com/obiverse/beebank", package = "nine-s-core", default-features = false }

# Clock (Layer 0) - logical tick-driven clock (no_std compatible, works in WASM)
beeclock-core = { git = "https://github.com/obiverse/beeclock", package = "beeclock-core", default-features = false, optional = true }
nine-s-store = { git = "https://github.com/obiverse/beebank", package = "nine-s-store", optional = true }
nine-s-shell = { git = "https://github.com/obiverse/beebank", package = "nine-s-shell", optional = true }
nine-s-kernel = { git = "https://github.com/obiverse/beebank", package = "nine-s-kernel", optional = true }

# Bitcoin wallet (BDK 2.x - modern modular architecture)
# bdk_wallet provides the high-level Wallet type
# bdk_file_store provides simple flat-file persistence (avoids rusqlite conflict)
# bdk_electrum provides Electrum server connectivity
bdk_wallet = { version = "2.0", default-features = false, features = ["std", "file_store"], optional = true }
bdk_electrum = { version = "0.23", default-features = false, features = ["use-rustls-ring"], optional = true }
bdk_bitcoind_rpc = { version = "0.22", optional = true }
bitcoincore-rpc = { version = "0.19", optional = true }
bip39 = { version = "2.0", optional = true }

# Nostr protocol
nostr = { version = "0.36", optional = true }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"], optional = true }
futures-util = { version = "0.3", optional = true }

# Identity / Crypto
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
blake3 = "1.5"
base64 = "0.22"
bitcoin = { version = "0.32", default-features = false, features = ["std"], optional = true }
rand = { version = "0.8", optional = true }

# WireGuard key derivation (Curve25519)
x25519-dalek = { version = "2.0", features = ["static_secrets"], optional = true }
zeroize = { version = "1.7", features = ["derive"], optional = true }

# Async runtime (native only)
tokio = { version = "1.37", features = ["full"], optional = true }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex for patterns
regex = "1.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Filesystem (native only)
dirs = { version = "5.0", optional = true }

# HTTP server (native only)
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }

# Crypto (for rustls - required by bdk_electrum, native only)
rustls = { version = "0.23", default-features = false, features = ["ring"], optional = true }

# WASM dependencies (browser only)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "IdbFactory",
    "IdbDatabase",
    "IdbTransaction",
    "IdbObjectStore",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbKeyRange",
    "IdbCursor",
    "IdbCursorWithValue",
    "DomException",
    "BroadcastChannel",
    "MessageEvent",
], optional = true }
indexed_db_futures = { version = "0.5", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
futures = { version = "0.3", optional = true }
# getrandom needs "js" feature for WASM
getrandom = { version = "0.2", features = ["js"], optional = true }

[dev-dependencies]
tempfile = "3.10"
once_cell = "1.19"
